# belly-bites-mono

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
app/: auth.py  config.py  models.py  repos.py
app/templates/: base.html  create_meal.html  home.html  login.html  meal_detail.html  meals.html
