[project]
name = "belly-bites"
version = "0.1.0"
description = "Belly Bites"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "starlette>=0.47.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
